fixed spacing

--- a/wizard/src/styles/button.css
+++ b/wizard/src/styles/button.css
@@ -41,16 +41,14 @@
 }
 
 .wizard-buy-now-button {
-  height: 22px;
-  /* width: 90px; */
+  height: 24px;
   border-radius: 2px;
   background-color: rgba(255,255,255,0);
   color: #0198F7;
-  border: 1px solid #0198F7;
   font-size: 0.8rem;
   font-weight: 400;
-  box-shadow: 0px 5px 10px -8px rgba(0,0,0,0.8);
-  padding: 0.2rem 1rem;
+  box-shadow: 0 1px 3px -1px rgba(0, 0, 0, .5);
+  padding: 0.3rem 1rem;
   transition: 0.2s;
 }
 
